tests/ui/coroutine/clone-impl.stderr
error[E0277]: the trait bound `Vec<u32>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`
  --> $DIR/clone-impl.rs:50:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`
...
LL |     check_copy(&gen_clone_0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`, the trait `Copy` is not implemented for `Vec<u32>`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:46:9
   |
LL |     let clonable_0: Vec<u32> = Vec::new();
   |         ---------- has type `Vec<u32>` which does not implement `Copy`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `clonable_0` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:90:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<char>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`
  --> $DIR/clone-impl.rs:50:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`
...
LL |     check_copy(&gen_clone_0);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:44:5: 44:12}`, the trait `Copy` is not implemented for `Vec<char>`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:46:9
   |
LL |         let v = vec!['a'];
   |             - has type `Vec<char>` which does not implement `Copy`
LL |         yield;
   |         ^^^^^ yield occurs here, with `v` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:90:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<u32>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`
  --> $DIR/clone-impl.rs:71:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`
...
LL |     check_copy(&gen_clone_1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`, the trait `Copy` is not implemented for `Vec<u32>`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:65:9
   |
LL |     let clonable_1: Vec<u32> = Vec::new();
   |         ---------- has type `Vec<u32>` which does not implement `Copy`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `clonable_1` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:90:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `Vec<char>: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`
  --> $DIR/clone-impl.rs:71:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`
...
LL |     check_copy(&gen_clone_1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:59:5: 59:12}`, the trait `Copy` is not implemented for `Vec<char>`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:65:9
   |
LL |         let v = vec!['a'];
   |             - has type `Vec<char>` which does not implement `Copy`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `v` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:90:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `NonClone: Copy` is not satisfied in `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`
  --> $DIR/clone-impl.rs:84:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`
...
LL |     check_copy(&gen_non_clone);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`, the trait `Copy` is not implemented for `NonClone`
   |
note: coroutine does not implement `Copy` as this value is used across a yield
  --> $DIR/clone-impl.rs:81:9
   |
LL |     let non_clonable: NonClone = NonClone;
   |         ------------ has type `NonClone` which does not implement `Copy`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `non_clonable` maybe used later
note: required by a bound in `check_copy`
  --> $DIR/clone-impl.rs:90:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`
help: consider annotating `NonClone` with `#[derive(Copy)]`
   |
LL + #[derive(Copy)]
LL | struct NonClone;
   |

error[E0277]: the trait bound `NonClone: Clone` is not satisfied in `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`
  --> $DIR/clone-impl.rs:86:5
   |
LL |     move || {
   |     ------- within this `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`
...
LL |     check_clone(&gen_non_clone);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ within `{coroutine@$DIR/clone-impl.rs:80:5: 80:12}`, the trait `Clone` is not implemented for `NonClone`
   |
note: coroutine does not implement `Clone` as this value is used across a yield
  --> $DIR/clone-impl.rs:81:9
   |
LL |     let non_clonable: NonClone = NonClone;
   |         ------------ has type `NonClone` which does not implement `Clone`
...
LL |         yield;
   |         ^^^^^ yield occurs here, with `non_clonable` maybe used later
note: required by a bound in `check_clone`
  --> $DIR/clone-impl.rs:91:19
   |
LL | fn check_clone<T: Clone>(_x: &T) {}
   |                   ^^^^^ required by this bound in `check_clone`
help: consider annotating `NonClone` with `#[derive(Clone)]`
   |
LL + #[derive(Clone)]
LL | struct NonClone;
   |

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
